test/e2e/fail/003-unbound-variable/expected.stderr
error[E0003]: cannot find value in this scope
 --> $FILE:1:14
  |
1 | let y: Int = x;
  |              ^ not found in this scope
  |
